Finish v1 implementation w/ ReactPlayer and FiddApi integrations
